deployments/polling-app-client.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polling-app-client
  namespace: public
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:899456967600:certificate/877ae8a9-31d3-4cad-8ad3-88b059442a65
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: polling.verticalrelevancelabs.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: polling-app-client
              port:
                number: 80
