deployments/polling-app-server.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polling-app-server
  namespace: api
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:899456967600:certificate/e0e84eda-6739-4ab4-a65d-db7247a64d4d
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: polling-api.verticalrelevancelabs.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: polling-app-server
              port:
                number: 8080
